samples/_failures_safe/1761340784_a0644d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c878d1b.c: In function ‘main’:
./samples/SAFE/__tmp_0c878d1b.c:148:17: error: expected declaration or statement at end of input
  148 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_0c878d1b.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c878d1b.c:148:17: error: expected declaration or statement at end of input
